// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render a <Heading /> component 1`] = `
.c0 {
  font-size: 24px;
  margin: 0px;
  font-weight: 400;
  line-height: 1.25;
}

<h3
  className="c0"
  fontSize={4}
/>
`;

exports[`Heading should render with <Text> component properties 1`] = `
.c0 {
  font-size: 24px;
  margin: 0px;
  color: #e60278;
  text-align: center;
  font-weight: 400;
  line-height: 1.25;
}

<h3
  className="c0"
  color="primary"
  fontSize={4}
/>
`;

exports[`Heading should render with default theme font size, when fontSize prop not used 1`] = `
.c0 {
  font-size: 24px;
  margin: 0px;
  font-weight: 400;
  line-height: 1.25;
}

<h3
  className="c0"
  fontSize={4}
/>
`;

exports[`Heading should render with h1-h6 dot-notation 1`] = `
.c0 {
  font-size: 48px;
  margin: 0px;
  font-weight: 400;
  line-height: 1.25;
}

<h1
  className="c0"
  fontSize={6}
/>
`;

exports[`Heading should render with h1-h6 dot-notation 2`] = `
.c0 {
  font-size: 32px;
  margin: 0px;
  font-weight: 600;
  line-height: 1.25;
}

<h2
  className="c0"
  fontSize={5}
/>
`;

exports[`Heading should render with h1-h6 dot-notation 3`] = `
.c0 {
  font-size: 24px;
  margin: 0px;
  font-weight: 600;
  line-height: 1.25;
}

<h3
  className="c0"
  fontSize={4}
/>
`;

exports[`Heading should render with h1-h6 dot-notation 4`] = `
.c0 {
  font-size: 20px;
  margin: 0px;
  font-weight: 400;
  line-height: 1.25;
}

<h4
  className="c0"
  fontSize={3}
/>
`;

exports[`Heading should render with h1-h6 dot-notation 5`] = `
.c0 {
  font-size: 16px;
  margin: 0px;
  font-weight: 600;
  line-height: 1.25;
}

<h5
  className="c0"
  fontSize={2}
/>
`;

exports[`Heading should render with h1-h6 dot-notation 6`] = `
.c0 {
  font-size: 12px;
  margin: 0px;
  font-weight: 600;
  text-transform: uppercase;
  line-height: 1.25;
}

<h6
  className="c0"
  fontSize={0}
/>
`;
